--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Envelope Selector</h1>
+      <h1>Envelope Selector!</h1>
 
       <div class="input-container">
         <p class="description">
